@@ -10,6 +10,8 @@ date Version 3.00.53
 * FS#298 - "wxFontPickerCtrl not selectable on form"
 * FS#299 - "wxFilePickerCtrl not selectable on form"
 * FS#300 - "wxDirPickerCtrl not selectable on form"
+* FS#301 - "wxToggleButton value property not updated"
+* Fixed C++ generation of the wxToggleButton "value" property
 
 12/17/2007 Version 3.00.52 (RC4-1)
 * Fixed application closing when double clicking on an .fpb file in Windows.
